# kcm-openrc

./: .gitignore  CMakeLists.txt  README.md  kcm_openrc.kdev4  openrc_actions.cpp  openrc_actions.h  openrc_kcm.cpp  openrc_kcm.h  openrckcmsettings.kcfg  openrckcmsettings.kcfgc  tridentu.auth.openrc.service.actions
package/: kcm_openrc.json
package/contents/ui/: OpenRCPanel.qml  main.qml
